--- a/index.html
+++ b/index.html
@@ -9,31 +9,34 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-        Header Logo
+        <div class="header flexy">
+            <p>Header Logo</p>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </div>
 
-        <div class="content">
-            frfrfrfrfr
-            <div class="hero">
+        <div class="content flexy">
+            <div class="hero flexy">
 
             </div>
-            <div class="main">
-                <div class="random">
+            <div class="main flexy">
+                <div class="random flexy">
 
                 </div>
-                <div class="quote">
+                <div class="quote flexy">
 
                 </div>
-                <div class="signup">
+                <div class="signup flexy">
 
                 </div>
             </div>
             
         </div>
 
-        <div class="footer">
-        frfrfrfrfr
+        <div class="footer flexy">
         </div>
     </div>
 </body>
