--- a/index.html
+++ b/index.html
@@ -20,23 +20,58 @@
 
         <div class="content flexy">
             <div class="hero flexy">
-
+                <div class="hero-left flexy">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button id="smallbutton"><a href="">Sign up</a></button>
+                </div>
+                <div class="hero-right flexy">
+                    <div class="placeholder flexy">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </div>
             </div>
             <div class="main flexy">
                 <div class="random flexy">
-
+                    <p class="random-title">Some random information.</p>
+                    <div class="vignette-row">
+                        <div class="full-vignette">
+                            <div class="vignette"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="full-vignette">
+                            <div class="vignette"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="full-vignette">
+                            <div class="vignette"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="full-vignette">
+                            <div class="vignette"></div>
+                            <p>this is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="quote flexy">
-
+                    <p class="quote-content">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                    <p class="quote-author">-Thor, God of Thunder</p>
                 </div>
                 <div class="signup flexy">
-
+                    <div class="call">
+                        <div class="left-call">
+                            <p class="title-call">Call to action! It's time!</p>
+                            <p class="desc-call">Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <button id="buttoncall">Sign up</button>
+                    </div>
                 </div>
             </div>
             
         </div>
 
         <div class="footer flexy">
+            <p>Copyright © Orkhyd 2022</p>
         </div>
     </div>
 </body>
