--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <p class="title-call">Call to action! It's time!</p>
                             <p class="desc-call">Sign up for our product by clicking that button right over there!</p>
                         </div>
-                        <button id="buttoncall">Sign up</button>
+                        <button id="buttoncall"><a href="">Sign up</a></button>
                     </div>
                 </div>
             </div>
